# cosap-nx

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/agents/: flow-validator.md
comparison_results/: variant_counts.tsv
comparison_results/isec_outputs/bwa_deepvariant_vs_bwa_haplotypecaller/: 0000.vcf  0001.vcf  0002.vcf  0003.vcf  README.txt  sites.txt
comparison_results/normalized_truth/: truth_normalized.vcf.gz.tbi
comparison_results/temp_isec/bwa_deepvariant/: 0000.vcf  0001.vcf  0002.vcf  0003.vcf  README.txt  sites.txt
comparison_results/temp_isec/bwa_haplotypecaller/: 0000.vcf  0001.vcf  0002.vcf  0003.vcf  README.txt  sites.txt
cosap_nx/: __init__.py  api.py  comparator.py  runner.py
docs/: API_REFERENCE.md  COSAP_CAPABILITIES_ANALYSIS.md  GRADUATION_PROJECT_ROADMAP.md  SETUP.md  TESTING_AND_BENCHMARKING.md  USER_GUIDE.md
examples/: alignment_only.py  compare_deepvariant_haplotypecaller.py  germline_deepvariant.py  germline_from_fastq.py  germline_haplotypecaller.py  homework_exome.py  mapper_chaining.py  sample_params.json  test_advanced_comparison.py
nf/: main.nf  nextflow.config
nf/conf/: base.config  docker.config
