[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosap-nx"
version = "0.1.0"
description = "COSAP-like pipeline builder with Nextflow backend"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "COSAP-NX Team"}
]
keywords = ["bioinformatics", "nextflow", "variant-calling", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
cosap-nx-run = "cosap_nx.runner:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cosap_nx*"]

[tool.setuptools.package-data]
"*" = ["nf/**/*"]
